MyFirstProject/src/objects/Client__c.object
<CustomObject>
    <description>Object client</description>
    <fields>
        <fullName>Client_code__c</fullName>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Client code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_number__c</fullName>
        <label>Mobile number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_contact__c</fullName>
        <label>Point of contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>